# graphdoc-server

./: .gitignore  .gitmodules  LICENSE  README.md
graphdoc/: .env.example  .gitignore  .testmondata  .testmondata-shm  CONTRIBUTING.md  LICENSE  README.md  graphdoc.ipynb  pyproject.toml  pyrightconfig.json  requirements.txt  run.sh
graphdoc-server/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.dev.license  Dockerfile.prod  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json  run.sh  run_prod.sh  run_tests.sh
graphdoc-server/graphdoc_server/: __init__.py  app.py  key.py
graphdoc-server/graphdoc_server/keys/: __init__.py  api_key_config.example.json  api_key_config.json  key.py
graphdoc-server/tests/: __init__.py  api_key_config.json  conftest.py  test_api.py  test_conftest.py  test_integration.py  test_script.py  test_server.py
graphdoc-server/tests/app/: __init__.py  test_app.py
graphdoc/.cursor/rules/: pep8.mdc
graphdoc/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
graphdoc/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
graphdoc/.github/workflows/: conventional_commits.yml  deploy_docs.yml
graphdoc/assets/configs/: single_prompt_doc_generator_module.yaml  single_prompt_doc_generator_module_eval.yaml  single_prompt_doc_generator_trainer.yaml  single_prompt_doc_quality_trainer.yaml
graphdoc/correct_responses/: response_1.graphql  response_2.graphql  response_3.graphql  response_6.graphql  response_7.graphql  response_8.graphql
graphdoc/docs/: Makefile  conf.py  generate_docs.py  graphdoc.config.rst  graphdoc.data.dspy_data.dspy_data_helper.rst  graphdoc.data.dspy_data.generation_data_helper.rst  graphdoc.data.dspy_data.quality_data_helper.rst  graphdoc.data.dspy_data.rst  graphdoc.data.helper.rst  graphdoc.data.local.rst  graphdoc.data.mlflow_data.mlflow_data_helper.rst  graphdoc.data.mlflow_data.rst  graphdoc.data.parser.rst  graphdoc.data.rst  graphdoc.data.schema.rst  graphdoc.eval.doc_generator_eval.rst  graphdoc.eval.rst  graphdoc.main.rst  graphdoc.modules.doc_generator_module.rst  graphdoc.modules.rst  graphdoc.prompts.rst  graphdoc.prompts.schema_doc_generation.rst  graphdoc.prompts.schema_doc_quality.rst  graphdoc.prompts.single_prompt.rst  graphdoc.rst  graphdoc.train.doc_generator_trainer.rst  graphdoc.train.doc_quality_trainer.rst  graphdoc.train.optimizers.rst  graphdoc.train.rst  graphdoc.train.single_prompt_trainer.rst  index.rst  links.rst  make.bat  modules.rst  tests.conftest.rst  tests.rst  tests.test_confest.rst  tests.test_config.rst
graphdoc/docs/source/: graphdoc.data.rst  graphdoc.prompts.rst  graphdoc.rst
graphdoc/graphdoc/: CONTRIBUTING.md  README.md  __init__.py  config.py  data.py  evaluate.py  executor.py  generate.py  helper.py  main.py  parser.py  prompt.py  run.sh  subgraph.py  trainer.py
graphdoc/incorrect_responses/: response_0.graphql  response_4.graphql  response_5.graphql  response_9.graphql
graphdoc/mlflow-manager/: Makefile  README.md  pyproject.toml  run.sh
graphdoc/mlruns/0/: meta.yaml
graphdoc/runners/: doc_quality_trainer.py  document.py  evaluate.py  local_data_update.py
graphdoc/tests/: README.md  __init__.py  conftest.py  test_confest.py  test_config.py  test_conftest.py  test_data.py  test_doc_generator_module.py  test_doc_generator_prompt.py  test_entity_comparison_tests.py  test_evaluate.py  test_flow.py  test_generate.py  test_graphdoc.py  test_graphdoc_build.py  test_helper.py  test_loader.py  test_parser.py  test_prompt.py  test_schema_doc_quality.py  test_subgraph.py
(+8671 files in other folders)
