[project]
name = "graphdoc"
version = "0.1.0"
description = ""
authors = [
    {name = "denver",email = "denver@semiotic.ai"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.0"
dspy = "2.6.3"
mlflow = "2.20.0"
litellm = "1.61.6"
responses = "^0.25.6"
flake8-bugbear = "^24.12.12"
docformatter = "^1.7.5"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
black = "24.10.0"
pyright = "1.1.392.post0"
pytest-testmon = "2.1.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^1.25.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.isort]
profile = 'black'

[tool.docformatter]
recursive = true
wrap-summaries = 88
wrap-descriptions = 88
blank = true